Remove usage of generic wildcard type